--- a/i18n/po/ja_JP/_posts/2020-11-10-mutiny-invoke-and-call.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-11-10-mutiny-invoke-and-call.adoc.po
@@ -2,29 +2,29 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:09+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-10 13:26+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:1
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "---\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:8
-#, no-wrap, fuzzy
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: Peeking at the streams\n"
@@ -38,13 +38,12 @@ msgstr ""
 "title: 流れを覗き込む\n"
 "date: 2020-11-10\n"
 "tags: reactive mutiny\n"
-"synopsis: 流れに触れずにイベントを観察する方法\n"
+"synopsis: ストリームに触れずにイベントを観察する方法\n"
 "author: cescoffier\n"
 "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:15
-#, fuzzy
 msgid ""
 "Mutiny is an event-driven Reactive Programming library.  Like other reactive "
 "programming libraries, it uses streams as the primary construct.  These "
@@ -53,23 +52,28 @@ msgid ""
 "are other kinds of events such as cancellation, request, completion, and so "
 "on."
 msgstr ""
-"Mutiny "
-"はイベント駆動型のリアクティブプログラミングライブラリです。他のリアクティブ・プログラミング・ライブラリと同様に、主要な構成要素としてストリームを使用します。これらのストリームはイベントを伝え、あなたのコードはこれらのイベントを処理します。ほとんどの場合、あなたのコードはアイテムイベントと失敗イベントにしか興味がありません。しかし、キャンセル、リクエスト、完了などの他の種類のイベントもあります。"
+"Mutiny はイベント駆動型のリアクティブプログラミングライブラリです。他のリアク"
+"ティブ・プログラミング・ライブラリと同様に、主要な構成要素としてストリームを"
+"使用します。これらのストリームはイベントを伝え、あなたのコードはこれらのイベ"
+"ントを処理します。ほとんどの場合、あなたのコードはアイテムイベントと失敗イベ"
+"ントにしか興味がありません。しかし、キャンセル、リクエスト、完了などの他の種"
+"類のイベントもあります。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:17
-#, fuzzy
 msgid ""
 "It's not rare that you need to look at these various events to understand "
 "better what's going on or implement specific side effects. For example, you "
 "may need to close a resource after a completion event or log a message on "
 "failure or cancellation."
 msgstr ""
-"何が起こっているのかをよりよく理解したり、特定の副作用を実装したりするために、これらの様々なイベントを見る必要があることは稀ではありません。例えば、完了イベントの後にリソースを閉じたり、失敗やキャンセル時にメッセージをログに記録したりする必要があるかもしれません。"
+"何が起こっているのかをよりよく理解したり、特定の副作用を実装したりするため"
+"に、これらの様々なイベントを見る必要があることは稀ではありません。例えば、完"
+"了イベントの後にリソースを閉じたり、失敗やキャンセル時にメッセージをログに記"
+"録したりする必要があるかもしれません。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:21
-#, fuzzy
 msgid ""
 "For each kind of event, there is an associated _group_ providing the methods "
 "to handle that specific event: `onItem()`, `onFailure()`, `onCompletion()` "
@@ -78,27 +82,27 @@ msgid ""
 "transform the received event; it notifies you that something happened and "
 "let you react."
 msgstr ""
-"イベントの種類ごとに、その特定のイベントを処理するための方法を提供する関連 _グループが_あります: `onItem()`, "
-"`onFailure()`, `onCompletion()` など。これらのグループは、配信に影響を与えずに様々なイベントを覗くための 2 "
-"つの方法を提供しています: `invoke` と `call` "
-"。これらのグループは、受信したイベントを変換するのではなく、何かが起こったことを通知して反応させてくれます。"
+"イベントの種類ごとに、その特定のイベントを処理するための方法を提供する関連 _"
+"グループ_ があります: `onItem()`, `onFailure()`, `onCompletion()` など。これ"
+"らのグループは、配信に影響を与えずに様々なイベントを覗くための 2 つの方法を提"
+"供しています: `invoke` と `call` 。これらのグループは、受信したイベントを変換"
+"するのではなく、何かが起こったことを通知して反応させてくれます。"
 
 #. type: Title ==
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:22
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "The invoke method"
 msgstr "invoke メソッド"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:26
-#, fuzzy
 msgid ""
 "The `invoke` method is synchronous and does not return anything.  Mutiny "
 "invokes the configured callback when the observed stream dispatches the "
 "event:"
 msgstr ""
-"`invoke` "
-"メソッドは同期的で、何も戻りません。Mutinyは、観測されたストリームがイベントをディスパッチするときに、設定されたコールバックを呼び出します。"
+"`invoke` メソッドは同期で、何も戻りません。Mutinyは、観測されたストリームがイ"
+"ベントをディスパッチするときに、設定されたコールバックを呼び出します。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:33
@@ -112,33 +116,32 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:37
-#, fuzzy
 msgid ""
 "As said above, `invoke` is synchronous.  Mutiny invokes the callback and "
 "propagates the event downstream when the callback returns. It blocks the "
 "dispatching."
 msgstr ""
-"上で述べたように、 `invoke` "
-"は同期しています。Mutinyはコールバックを呼び出し、コールバックが戻ってきたらイベントを下流に伝播させます。ディスパッチをブロックします。"
+"上で述べたように、 `invoke` は同期です。Mutinyはコールバックを呼び出し、コー"
+"ルバックが戻ってきたらイベントを下流に伝播させます。ディスパッチをブロックし"
+"ます。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:39
-#, fuzzy
 msgid "image:/assets/images/posts/mutiny-invoke-call/invoke.png[]"
-msgstr "image:/assets/images/posts/mutiny-invoke-call/invoke.png[alt=invoke]"
+msgstr "image:/assets/images/posts/mutiny-invoke-call/invoke.png[]"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:41
-#, fuzzy
 msgid "Of course, we highly recommend you not to block."
 msgstr "もちろん、ブロックしないことを強くお勧めします。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:43
-#, fuzzy
 msgid ""
 "The following snippets show how you can log the different types of events."
-msgstr "次のスニペットは、さまざまな種類のイベントをログに記録する方法を示しています。"
+msgstr ""
+"次のスニペットは、さまざまな種類のイベントをログに記録する方法を示していま"
+"す。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:53
@@ -155,70 +158,71 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:56
-#, fuzzy
 msgid ""
 "The arrows from the previous code snippet indicate if the event comes from "
 "the upstream (source) or downstream (consumer)."
-msgstr "前のコードスニペットの矢印は、イベントが上流（ソース）から来るのか、下流（コンシューマ）から来るのかを示しています。"
+msgstr ""
+"前のコードスニペットの矢印は、イベントが上流（ソース）から来るのか、下流（コ"
+"ンシューマ）から来るのかを示しています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:59
-#, fuzzy
 msgid ""
 "The `invoke` method does not change the event, except in one case.  If the "
 "`invoke` callback throws an exception, the downstream does not get the "
 "actual event but get a failure event instead."
 msgstr ""
 "`invoke` メソッドは、1 つのケースを除いて、イベントを変更しません。 `invoke` "
-"コールバックが例外をスローした場合、ダウンストリームは実際のイベントを取得せず、代わりに失敗イベントを取得します。"
+"コールバックが例外をスローした場合、ダウンストリームは実際のイベントを取得せ"
+"ず、代わりに失敗イベントを取得します。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:61
-#, fuzzy
 msgid ""
 "When observing the failure event, if the callback throws an exception, "
 "Mutiny propagates a `CompositeException` aggregating the original failure "
 "and the callback failure."
 msgstr ""
-"失敗イベントを観測しているときに、コールバックが例外を投げると、Mutinyは元の失敗とコールバックの失敗を集約した "
-"`CompositeException` を伝播します。"
+"失敗イベントを観測しているときに、コールバックが例外を投げると、Mutinyは元の"
+"失敗とコールバックの失敗を集約した `CompositeException` を伝播します。"
 
 #. type: Title ==
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:62
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "The call method"
 msgstr "呼び出し方法"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:65
-#, fuzzy
 msgid ""
 "Unlike `invoke`, `call` is asynchronous, and the callback returns a `Uni<?>` "
 "object."
 msgstr ""
-"`invoke` とは異なり、 `call` は非同期で、コールバックは `Uni&amp;lt;?&amp;gt;` オブジェクトを返します。"
+"`invoke` とは異なり、 `call` は非同期で、コールバックは `Uni<?>` オブジェクト"
+"を返します。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:67
-#, fuzzy
 msgid ""
 "`call` is often used when you need to implement asynchronous side-effects, "
 "such as closing resources."
-msgstr "`call` リソースを閉じるなど、非同期の副作用を実装する必要がある場合によく使われます。"
+msgstr ""
+"`call` リソースを閉じるなど、非同期の副作用を実装する必要がある場合によく使わ"
+"れます。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:69
-#, fuzzy
 msgid "image:/assets/images/posts/mutiny-invoke-call/call.png[]"
 msgstr "image:/assets/images/posts/mutiny-invoke-call/call.png[alt=call]"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:71
-#, fuzzy
 msgid ""
 "Mutiny does not dispatch the original event downstream until the Uni "
 "returned by the callback emits an item:"
-msgstr "Mutinyは、コールバックによって返されたUniがアイテムを放出するまで、元のイベントを下流にディスパッチしません。"
+msgstr ""
+"Mutinyは、コールバックによって返されたUniがアイテムを放出するまで、元のイベン"
+"トを下流にディスパッチしません。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:80
@@ -239,6 +243,8 @@ msgid ""
 "As shown in the previous snippet, you can use this approach to delay items. \n"
 "But the primary use case is about completing asynchronous actions:\n"
 msgstr ""
+"前のスニペットが示すように、このアプローチを使用してアイテムを遅らせることもできます。\n"
+"ただし、主なユースケースは非同期アクションの完了に関するものです。\n"
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:85
@@ -248,33 +254,35 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:88
-#, no-wrap, fuzzy
-msgid "multi\n"
+#, no-wrap
+msgid ""
+"multi\n"
 "    .onCompletion().call(() -> resource.close())\n"
-msgstr "multi .onCompletion().call) → resource.close("
+msgstr ""
+"multi\n"
+"    .onCompletion().call(() -> resource.close())\n"
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:93
 #, no-wrap
 msgid ""
-"Under the hood, Mutiny gets the `Uni` (by invoking the callback) and "
-"subscribes to it. \n"
+"Under the hood, Mutiny gets the `Uni` (by invoking the callback) and subscribes to it. \n"
 "It observes the item or failure event from that `Uni`. \n"
 "It discards the item value as only the emission matters in this case.\n"
 msgstr ""
+"内部的には、Mutinyは `Uni` を（コールバックを呼び出すことによって）取得し、サブスクライブします。 \n"
+"`Uni`からアイテムまたは障害イベントを監視します。\n"
+"この場合、排出のみが重要であるため、アイテムの値は破棄されます。\n"
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:95
 #, no-wrap
-msgid ""
-"If the callback throws an exception or the produced `Uni` produces a "
-"failure, Mutiny propagates that failure (or a `CompositeException`) "
-"downstream, replacing the original event. \n"
-msgstr ""
+msgid "If the callback throws an exception or the produced `Uni` produces a failure, Mutiny propagates that failure (or a `CompositeException`) downstream, replacing the original event. \n"
+msgstr "コールバックが例外をスローするか、生成された `Uni` が失敗を生成した場合、Mutinyはその失敗（または `CompositeException` ）をダウンストリームに伝播し、元のイベントを置き換えます。\n"
 
 #. type: Title ==
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:96
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Summary"
 msgstr "概要"
 
@@ -284,6 +292,8 @@ msgid ""
 "The `invoke` and `call` methods are handy when you need to observe a stream "
 "without changing the transiting events."
 msgstr ""
+"`invoke` と `call` メソッドはストリームをイベントを変更せずに観察するのに便利"
+"です。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:102
@@ -293,15 +303,18 @@ msgid ""
 "asynchronous side-effects, such as closing resources, flushing data, delay "
 "items, and so on."
 msgstr ""
+"`invoke`を同期の副作用操作やイベントのロギングの実装の為に使用してください。 "
+"`call`の非同期性は、非同期副作用操作、例えばリソースのクローズ、データのフ"
+"ラッシュ、アイテムの遅延などを実装するのに最適です。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:104
 msgid "The following table highlights the key differences:"
-msgstr ""
+msgstr "以下のテーブルが主な違いを示しています。"
 
 #. type: Table
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:115
-#, no-wrap, fuzzy
+#, no-wrap
 msgid ""
 "\n"
 "| Method | `invoke` | `call`\n"
@@ -312,11 +325,21 @@ msgid ""
 "\n"
 "| Main Use cases | logging | closing resources, flushing data\n"
 "\n"
-msgstr "| 方法｜方法｜ `invoke` `call`"
+msgstr ""
+"\n"
+"| Method | `invoke` | `call`\n"
+"\n"
+"| Nature | synchronous | asynchronous\n"
+"\n"
+"| Return type | `void` | `Uni<?>`\n"
+"\n"
+"| Main Use cases | logging | closing resources, flushing data\n"
+"\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-10-mutiny-invoke-and-call.adoc:117
-#, fuzzy
 msgid ""
 "These methods are available for every kind of event in the associated group."
-msgstr "これらのメソッドは、関連するグループ内のあらゆる種類のイベントに対して利用可能です。"
+msgstr ""
+"これらのメソッドは、関連するグループ内のあらゆる種類のイベントに対して利用可"
+"能です。"
