--- a/i18n/po/ja_JP/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc.po
@@ -2,36 +2,35 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:09+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-11 00:16+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:1
-#, no-wrap, fuzzy
+#, fuzzy, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:8
-#, no-wrap, fuzzy
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.9.2.Final released - Bugfixes'\n"
 "date: 2020-11-05\n"
 "tags: release\n"
-"synopsis: 1.9.2.Final fixes issues and comes with documentation improvements."
-"\n"
+"synopsis: 1.9.2.Final fixes issues and comes with documentation improvements.\n"
 "author: gsmet\n"
 "---\n"
 msgstr ""
@@ -45,107 +44,101 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:12
-#, fuzzy
 msgid ""
 "Just a week after 1.9.1.Final, here comes 1.9.2.Final with some bugfixes and "
 "documentation improvements.  Thanks a lot to everyone providing feedback and "
 "pull requests!"
 msgstr ""
-"1.9.1.Finalからちょうど一週間後、バグフィックスとドキュメントの改善を加えた1.9.2."
-"Finalがやってきました。フィードバックとプルリクエストを提供してくださった皆様、ありがとうございました。"
+"1.9.1.Finalからちょうど一週間後、バグフィックスとドキュメントの改善を加えた"
+"1.9.2.Finalがやってきました。フィードバックとプルリクエストを提供してくださっ"
+"た皆様、ありがとうございました！"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:14
-#, fuzzy
 msgid "It is a safe upgrade for everyone using Quarkus 1.9."
-msgstr "これは、Quarkus 1.9を使用しているすべての人にとって安全なアップグレードです。"
+msgstr ""
+"これは、Quarkus 1.9を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:16
-#, fuzzy
 msgid ""
 "If you are not using 1.9 already, please refer to the https://github.com/"
 "quarkusio/quarkus/wiki/Migration-Guide-1.9[1.9 migration guide]."
 msgstr ""
-"すでに1.9を使用していない場合は、1. link:https://github.com/quarkusio/quarkus/wiki/"
-"Migration-Guide-1.9[9移行ガイド]を参照してください。"
+"まだ1.9を使用していない場合は、 link:https://github.com/quarkusio/quarkus/"
+"wiki/Migration-Guide-1.9[1.9移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:17
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "What's new?"
-msgstr "何が新しいの？"
+msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:20
-#, fuzzy
 msgid "This release is a maintenance release."
 msgstr "このリリースはメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:22
-#, fuzzy
 msgid ""
 "You can get https://github.com/quarkusio/quarkus/releases/tag/1.9.2."
 "Final[the full changelog of 1.9.2.Final on GitHub]."
 msgstr ""
 "link:https://github.com/quarkusio/quarkus/releases/tag/1.9.2.Final[1.9.2."
-"Finalの完全な変更履歴はGitHubで]入手できます。"
+"Finalの完全な変更履歴はGitHub]で入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:23
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Come Join Us"
-msgstr "私たちと一緒に来てください"
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:26
-#, fuzzy
 msgid ""
 "We value your feedback a lot so please report bugs, ask for improvements... "
 "Let's build something great together!"
-msgstr "私たちはあなたのフィードバックをとても大切にしていますので、バグを報告したり、改善をお願いしたり...一緒に素晴らしいものを作りましょう!"
+msgstr ""
+"私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非"
+"お願いします。一緒に素晴らしいものを作り上げていきましょう！"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:28
-#, fuzzy
 msgid ""
 "If you are a Quarkus user or just curious, don't be shy and join our "
 "welcoming community:"
-msgstr "Quarkusのユーザーの方、または好奇心旺盛な方は、恥ずかしがらずに当社の歓迎するコミュニティに参加してください。"
+msgstr ""
+"Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらず"
+"にコミュニティに参加して下さい！："
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:30
-#, fuzzy
 msgid ""
 "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
-"link:https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバックを提供します。"
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:31
-#, fuzzy
 msgid ""
 "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
 msgstr ""
-"いくつかのコードを作成し、 link:https://github.com/quarkusio/quarkus/pulls[PRをプッシュします]。"
+"コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] "
+"を送信"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:32
-#, fuzzy
 msgid ""
-"discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https:/"
-"/groups.google.com/d/forum/quarkus-dev[mailing list];"
+"discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the "
+"https://groups.google.com/d/forum/quarkus-dev[mailing list];"
 msgstr ""
-"link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/"
-"d/forum/quarkus-dev[メーリングリスト]で議論しましょう。"
+"https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/"
+"quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-05-quarkus-1-9-2-final-released.adoc:33
-#, fuzzy
 msgid ""
 "ask your questions on https://stackoverflow.com/questions/tagged/"
 "quarkus[Stack Overflow]."
 msgstr ""
-"Stack link:https://stackoverflow.com/questions/tagged/"
-"quarkus[Overflow]で質問をしてみましょう。"
+"https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
